The Cosora Theme is almost complete and is being rolled out on the site to demo it. We now track the views on a per-route basis. We have plans for an admin UI for this, global views, etc. which will come in a future commit.
The local error JSON is now properly formed.
Fixed an outdated line in topic.go which was using the old cache system.
We now use fuzzy dates for relative times between three months ago and a year ago.
Added the super admin middleware and the associated tests.
Added the route column to the viewchunks table.
Added more alt attributes to images.
Added a few missing ARIA attributes.

Began refactoring the route generator to use text/template instead of generating everything procedurally.
Began work on per-topic view counts.

--- a/templates/ip-search.html
+++ b/templates/ip-search.html
@@ -1,5 +1,5 @@
 {{template "header.html" . }}
-<main>
+<main id="ip_search_container">
 	<div class="rowblock rowhead">
 		<div class="rowitem">
 			<h1>IP Search</h1>
@@ -8,14 +8,15 @@
 	<form action="/users/ips/" method="get" id="ip-search-form"></form>
 	<div class="rowblock ip_search_block">
 		<div class="rowitem passive">
-			<input form="ip-search-form" name="ip" class="ip_search_input" type="search" placeholder="🔍︎" {{if .IP}}value="{{.IP}}"{{end}}/>
+			<input form="ip-search-form" name="ip" class="ip_search_input" type="search" placeholder="🔍︎"{{if .IP}} value="{{.IP}}"{{end}} />
 			<input form="ip-search-form" class="ip_search_search" type="submit" value="Search" />
 		</div>
 	</div>
 	{{if .IP}}
-	<div class="rowblock bgavatars">
+	<div class="rowblock rowlist bgavatars">
 		{{range .ItemList}}<div class="rowitem" style="background-image: url('{{.Avatar}}');">
-			<a href="{{.Link}}">{{.Name}}</a>
+			<img src="{{.Avatar}}" class="bgsub" alt="{{.Name}}'s Avatar" />
+			<a class="rowTitle" href="{{.Link}}">{{.Name}}</a>
 		</div>
 		{{else}}<div class="rowitem">No users found.</div>{{end}}
 	</div>
