--- a/themes/tempra-cursive/public/main.css
+++ b/themes/tempra-cursive/public/main.css
@@ -173,7 +173,10 @@ li a {
 	font-size: 12px;
 }
 
-.rowlist.bgavatars .rowitem {
+.bgsub {
+	display: none;
+}
+.bgavatars .rowitem {
 	background-repeat: no-repeat;
 	background-size: 50px;
 	padding-left: 58px;
@@ -503,7 +506,7 @@ button.username {
 .mention {
 	font-weight: bold;
 }
-.show_on_edit, .auto_hide {
+.show_on_edit, .auto_hide, .hide_on_big, .show_on_mobile {
 	display: none;
 }
 
