--- a/templates/panel-adminlogs.html
+++ b/templates/panel-adminlogs.html
@@ -16,7 +16,7 @@
 	</div>
 	<div id="panel_adminlogs" class="colstack_item rowlist">
 		{{range .Logs}}
-		<div class="rowitem panel_compactrow" style="font-weight: normal;text-transform: none;">
+		<div class="rowitem panel_compactrow">
 			<span style="float: left;">
 				<span>{{.Action}}</span><br />
 				<small style="margin-left: 2px;font-size: 12px;">{{.IPAddress}}</small>
@@ -30,11 +30,11 @@
 	</div>
 	{{if gt .LastPage 1}}
 	<div class="pageset">
-		{{if gt .Page 1}}<div class="pageitem"><a href="?page={{subtract .Page 1}}">Prev</a></div>{{end}}
+		{{if gt .Page 1}}<div class="pageitem"><a href="?page={{subtract .Page 1}}" aria-label="Previous Page">Prev</a></div>{{end}}
 		{{range .PageList}}
-		<div class="pageitem"><a href="?page={{.}}">{{.}}</a></div>
+		<div class="pageitem"><a href="?page={{.}}" aria-label="Page {{.}}">{{.}}</a></div>
 		{{end}}
-		{{if ne .LastPage .Page}}<div class="pageitem"><a href="?page={{add .Page 1}}">Next</a></div>{{end}}
+		{{if ne .LastPage .Page}}<div class="pageitem"><a href="?page={{add .Page 1}}" aria-label="Next Page">Next</a></div>{{end}}
 	</div>
 	{{end}}
 </main>
