--- a/templates/panel-users.html
+++ b/templates/panel-users.html
@@ -9,7 +9,7 @@
 	<div id="panel_users" class="colstack_item rowlist bgavatars">
 		{{range .ItemList}}
 		<div class="rowitem editable_parent" style="background-image: url('{{.Avatar}}');">
-			<img class="bgsub" src="{{.Avatar}}" />
+			<img class="bgsub" src="{{.Avatar}}" alt="{{.Name}}'s Avatar" />
 			<a class="rowTitle" {{if $.CurrentUser.Perms.EditUser}}href="/panel/users/edit/{{.ID}}?session={{$.CurrentUser.Session}}" {{end}}class="editable_block">{{.Name}}</a>
 			<a href="/user/{{.ID}}" class="tag-mini">Profile</a>
 			{{if (.Tag) and (.IsSuperMod)}}<span style="float: right;"><span class="panel_tag" style="margin-left 4px;">{{.Tag}}</span></span>{{end}}
