--- a/templates/login.html
+++ b/templates/login.html
@@ -14,7 +14,7 @@
 				<div class="formitem"><input name="password" type="password" autocomplete="current-password" placeholder="*****" required /></div>
 			</div>
 			<div class="formrow">
-				<div class="formitem"><button name="login-button" class="formbutton">Login</div>
+				<div class="formitem"><button name="login-button" class="formbutton">Login</button></div>
 				<div class="formitem" style="color: #505050; font-size: 12px; font-weight: normal; float: right;">Don't have an account?</div>
 			</div>
 		</form>
