--- a/templates/register.html
+++ b/templates/register.html
@@ -22,7 +22,7 @@
 				<div class="formitem"><input name="confirm_password" type="password" placeholder="*****" aria-labelledby="confirm_password_label" required /></div>
 			</div>
 			<div class="formrow">
-				<div class="formitem"><button name="register-button" class="formbutton">Create Account</div></div>
+				<div class="formitem"><button name="register-button" class="formbutton">Create Account</button></div>
 			</div>
 		</form>
 	</div>
