Added support for per-topic view counters.
Added support for shutdown tasks.
View counters are now saved on graceful shutdown.
Dynamic routes are now tracked by the route view counter.
The uploads route should now be tracked by the route view counter.
Added a WYSIWYG Editor to the profiles for Cosora.

--- a/themes/cosora/public/main.css
+++ b/themes/cosora/public/main.css
@@ -479,6 +479,9 @@ select, input, textarea, button {
 	width: 100%;
 	height: min-content;
 }
+.topic_reply_form .formrow {
+	padding: 0px !important;
+}
 .topic_reply_form .trumbowyg-button-pane:after {
 	display: none;
 }
@@ -934,6 +937,9 @@ select, input, textarea, button {
 }
 #profile_comments {
 	margin-bottom: 12px;
+}
+#profile_comments:empty {
+	display: none !important;
 }
 #profile_comments .rowitem {
 	background-image: none !important;
