--- a/templates/profile.html
+++ b/templates/profile.html
@@ -69,18 +69,16 @@
 	<div id="profile_comments_head" class="colstack_item colstack_head hash_hide">
 		<div class="rowitem"><h1><a>Comments</a></h1></div>
 	</div>
-	<div id="profile_comments" class="colstack_item hash_hide">
-		{{template "profile_comments_row.html" . }}
-	</div>
+	<div id="profile_comments" class="colstack_item hash_hide">{{template "profile_comments_row.html" . }}</div>
 
 {{if not .CurrentUser.IsBanned}}
 	<form id="profile_comments_form" class="hash_hide" action="/profile/reply/create/" method="post">
 		<input name="uid" value='{{.ProfileOwner.ID}}' type="hidden" />
 		<div class="colstack_item topic_reply_form" style="border-top: none;">
 			<div class="formrow">
-				<div class="formitem"><textarea name="reply-content" placeholder="Insert reply here"></textarea></div>
+				<div class="formitem"><textarea class="input_content" name="reply-content" placeholder="Insert comment here"></textarea></div>
 			</div>
-			<div class="formrow">
+			<div class="formrow quick_button_row">
 				<div class="formitem"><button name="reply-button" class="formbutton">Create Reply</button></div>
 			</div>
 		</div>
